--- a/Commerce-Client/package.json
+++ b/Commerce-Client/package.json
@@ -15,11 +15,11 @@
     "@angular/common": "~9.0.3",
     "@angular/compiler": "~9.0.3",
     "@angular/core": "~9.0.3",
-    "@angular/forms": "~9.0.3",
+    "@angular/forms": "^9.0.5",
     "@angular/localize": "^9.0.4",
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
-    "@angular/router": "~9.0.3",
+    "@angular/router": "^9.0.5",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
