--- a/Commerce-Client/angular.json
+++ b/Commerce-Client/angular.json
@@ -25,7 +25,7 @@
             ],
             "styles": [
               "src/styles/styles.css",
-              "src/styles/bootstrap/css/bootstrap.min.css"
+              "src/styles/bootstrap.min.css"
             ],
             "scripts": []
           },
