Added initial configuration for cross application calls

--- a/CommerceServer/src/main/resources/application.properties
+++ b/CommerceServer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 ## MySQL
 spring.datasource.url=jdbc:mysql://136.32.145.118:3306/CommerceDB?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=connor
-spring.datasource.password=c0nn0r1
+spring.datasource.username=commerce-notifications
+spring.datasource.password=todoencrypt
