--- a/Commerce-Client/package.json
+++ b/Commerce-Client/package.json
@@ -11,29 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.2",
-    "@angular/common": "^9.1.2",
-    "@angular/compiler": "^9.1.2",
-    "@angular/core": "^9.1.2",
-    "@angular/forms": "^9.1.2",
-    "@angular/localize": "^9.1.2",
-    "@angular/platform-browser": "^9.1.2",
-    "@angular/platform-browser-dynamic": "^9.1.2",
-    "@angular/router": "^9.1.2",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "@angular/animations": "^9.1.3",
+    "@angular/common": "^9.1.3",
+    "@angular/compiler": "^9.1.3",
+    "@angular/core": "^9.1.3",
+    "@angular/forms": "^9.1.3",
+    "@angular/localize": "^9.1.3",
+    "@angular/platform-browser": "^9.1.3",
+    "@angular/platform-browser-dynamic": "^9.1.3",
+    "@angular/router": "^9.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "minimist": "^1.2.5",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
+    "xlsx": "^0.15.6",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.900.7",
-    "@angular/cli": "^9.1.1",
-    "@angular/compiler-cli": "^9.1.2",
-    "@angular/language-service": "^9.1.2",
+    "@angular/cli": "^9.1.3",
+    "@angular/compiler-cli": "^9.1.3",
+    "@angular/language-service": "^9.1.3",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.35",
+    "@types/node": "^12.12.37",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -42,7 +43,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "~5.4.3",
+    "protractor": "^5.4.4",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
