--- a/Commerce-Server/src/main/resources/application.properties
+++ b/Commerce-Server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.servlet.context-path=/Commerce-Server
 
-## MySQL
-spring.datasource.url=jdbc:mysql://136.32.145.118:3306/CommerceDB?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=commerce-notifications
-spring.datasource.password=todoencrypt
+## MySQL - Need to set datasource properties
+spring.datasource.url=jdbc:mysql://<Database IP and port here>/CommerceDB?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=commerce-notifications ## DEFINE ON DATABASE
+spring.datasource.password= ## DEFINE ON DATABASE
