--- a/Commerce-Client/package.json
+++ b/Commerce-Client/package.json
@@ -11,39 +11,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.4",
-    "@angular/common": "^9.1.4",
-    "@angular/compiler": "^9.1.4",
-    "@angular/core": "^9.1.4",
-    "@angular/forms": "^9.1.4",
-    "@angular/localize": "^9.1.4",
-    "@angular/platform-browser": "^9.1.4",
-    "@angular/platform-browser-dynamic": "^9.1.4",
-    "@angular/router": "^9.1.4",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@angular/animations": "^9.1.12",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
+    "@angular/forms": "^9.1.12",
+    "@angular/localize": "^9.1.12",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/router": "^9.1.12",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "minimist": "^1.2.5",
-    "rxjs": "^6.5.5",
-    "tslib": "^1.11.2",
+    "rxjs": "^6.6.3",
+    "tslib": "^1.14.1",
     "xlsx": "^0.15.6",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.7",
-    "@angular/cli": "^9.1.4",
-    "@angular/compiler-cli": "^9.1.4",
-    "@angular/language-service": "^9.1.4",
-    "@types/jasmine": "^3.5.10",
+    "@angular-devkit/build-angular": "^0.1100.3",
+    "@angular/cli": "^9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "^9.1.12",
+    "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.38",
+    "@types/node": "^12.19.8",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "^5.4.4",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
